 iTeleskop ChangeLog
---------------------
0.5.1 (not-released-yet)
- Created/Activated/Performed columns are now shown by default in
  the Tasks view.
- Autocenter/Dither/Defocus/Calibrate/Pinpoint/Upload columns are now
  hidden by default in the Tasks view.
- Debug information for failed login is now omitted.

0.5.0 (2016-05-03)
- Database connection errors are now displayed (this solves a problem,
  when DB was offline and user tried to log in. Previously there was
  no visible reaction, although the software tried to connect to the
  database).
- Changes in adding new task panel:
  - Changed available filters to Luminance, Sloan g', Sloan r',
    Sloan i', H alpha
  - Removed guiding field
  - Removed extra commands field
  - Removed auto center field
  - Do not observe after is now set to (today) + 30 days (was 14)
- Password are now MD5 hashed
- View tasks panel:
  - state 5 is now no longer used
  - states -1 (deleted) and -2 (deleted template) are now displayed
    properly
  - tasks in state 2 (activated) can now be deleted or moved back to
    state 1
  - added filtering for states -1 (deleted) and -2 (deleted template)

0.4.0 (2016-02-06)
- Objects panel updated, added several columns:
  - type (object type, as defined in NGC calatog)
  - epoch (J2000.0 in most cases)
  - magnitude (value taken from official catalogs)
  - width, height (expressed in minutes, as defined in catalogs)
- Object in the Object list can be double clicked. It will use its
  name, ra, dec in New task
- Targets can be now be selected from objects list
- Minor tweaks in New task panel

0.3.1 (3016-02-03)
- Corrected display of small negative declination (between 0 and -1
  degree)
- The default filter is now CV

0.3.0 (2016-02-03)
- Updated file column. It's now visible and for non-empty values it
  is clickable.
- Tasks are now edited with double click, rather than selection.
- User preferences panel added. It's in read-only mode for now, but